--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,256 @@
 TP8-Tomografia/CT simulator/ctsim-installer-win32-3.0.3.exe
 TP8-Tomografia/CT simulator/ctsim-manual-latest.pdf
 TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5.zip
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/aclocal.m4
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/AUTHORS
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/benchmarks/composite-test
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/benchmarks/results
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/cgi-bin/ctsim.cgi.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/cgi-bin/ctsim.conf.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/cgi-bin/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/cgi-bin/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/ChangeLog
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/config.guess
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/config.h.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/config.sub
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/configure
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/configure.ac
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/COPYING
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/COPYRIGHT
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/depcomp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/do-autoconf
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/alphacalc.ai
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/alphacalc.bmp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/alphacalc.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/alphacalc.gif
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/bullet.bmp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-algorithms.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-concepts.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-gui.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-install.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-latex.bib
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-sgp.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-tex2rtf.bib
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-textui.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim-web.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim.hlp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim.hpj
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim.prj
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsim.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig1.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig1.fig
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig2.fig
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig3.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig3.fig
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig4.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig4.fig
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig5.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/ctsimfig5.fig
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/divergent.ai
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/divergent.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/divergent.gif
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/equiangular.ai
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/equiangular.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/equiangular.gif
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/equilinear.ai
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/equilinear.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/equilinear.gif
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/fancyhea.sty
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/logo.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/logo.gif
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/make-help
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/Makefile
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/makeidx.sty
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/maphhc.pl
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/mysober.sty
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/mytitle.sty
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/psbox.tex
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/scangeometry.ai
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/scangeometry.eps
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/scangeometry.gif
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/tex2rtf.ini
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/texhelp.sty
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/doc/verbatim.sty
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/docs/ctsim.htb
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/docs/ctsim.pdf
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/docs/html.tar.gz
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/getopt/depcomp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/getopt/getopt.c
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/getopt/getopt.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/getopt/getopt1.c
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/getopt/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/getopt/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/helical/dynphm.c
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/helical/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/helical/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/helical/sample-helical.sh.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/html/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/html/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/html/simulate.html.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/images/logo-full-size.psd
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/images/logo16.bmp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/images/logo32.bmp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/images/logo48.bmp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/images/SplashScreen.psd
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/array2d.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/array2dfile.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/backprojectors.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/ct.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/ctglobals.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/ctndicom.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/ctsupport.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/ezplot.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/filter.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/fnetorderstream.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/fourier.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/hashtable.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/imagefile.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/interpolator.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/mpiworld.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/msvc_compat.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/nographics.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/phantom.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/plotfile.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/pol.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/procsignal.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/projections.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/reconstruct.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/scanner.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/sgp.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/sstream_subst
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/timer.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/trace.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/include/transformmatrix.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/INSTALL
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/install-sh
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/bresenham.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/ezplot.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/ezset.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/ezsupport.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/pol.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/sgp.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctgraphics/transformmatrix.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/array2dfile.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/backprojectors.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/ctndicom.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/filter.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/fourier.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/imagefile.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/phantom.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/procsignal.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/projections.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/reconstruct.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/scanner.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsim/trace.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/clip.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/consoleio.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/fnetorderstream.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/globalvars.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/hashtable.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/interpolator.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/Makefile.nt
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/mathfuncs.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/msvc.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/plotfile.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/strfuncs.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/syserror.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/libctsupport/xform.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/ctsim.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/ctsim.texi
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/ctsimtext.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/if1.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/if2.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/ifexport.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/ifinfo.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/linogram.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/phm2helix.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/phm2if.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/phm2pj.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/pj2if.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/pjHinterp.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/pjinfo.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/man/pjrec.1
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/missing
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/mkinstalldirs
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/copy-binaries.bat
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsim.dsw
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsim/ctsim.dsp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsim/ctsim.plg
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsim/ctsim.rc
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsim/ctsim.vcproj
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsim/logo.ico
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsimtext/ctsimtext.dsp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsimtext/ctsimtext.rc
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsimtext/ctsimtext.vcproj
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/ctsimtext/logo.ico
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/libctsim/libctsim.dsp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/msvc/libctsim/libctsim.vcproj
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/NEWS
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/README
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/README.msvc
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/rpm/ctsim.spec
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/backgroundmgr.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/backgroundmgr.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/backgroundsupr.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/backgroundsupr.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/ctsim-map.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/ctsim.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/ctsim.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/ctsim.rc
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/ctsim.xpm
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dialogs.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dialogs.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dlgezplot.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dlgezplot.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dlgprojections.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dlgprojections.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dlgreconstruct.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/dlgreconstruct.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/docs.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/docs.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/graph3dview.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/graph3dview.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/splash.xpm
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/threadproj.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/threadproj.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/threadraster.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/threadraster.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/threadrecon.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/threadrecon.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/tips.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/tips.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/views.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/src/views.h
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/TODO
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/ctsimtext.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/if1.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/if2.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/ifexport.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/ifinfo.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/linogram.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/Makefile.am
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/Makefile.in
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/mpiworld.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/nographics.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/phm2helix.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/phm2if.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/phm2pj.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/pj2if.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/pjHinterp.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/pjinfo.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/pjrec.cpp
+TP8-Tomografia/CT simulator/Source code/ctsim-4.5.5/tools/sample-ctsim.sh.in
